plugins/javaFX/testData/highlighting/rootTagOnDifferentLevels.fxml
<?import javafx.scene.layout.*?>
<GridPane xmlns:fx="http://javafx.com/fxml">
  <<error descr="<fx:root> is valid only as the root node of an FXML document">fx:root</error> type="javafx.scene.layout.AnchorPane"/>
  <fx:define>
    <<error descr="<fx:root> is valid only as the root node of an FXML document">fx:root</error> type="javafx.scene.layout.AnchorPane"/>
  </fx:define>
  <GridPane>
    <<error descr="<fx:root> is valid only as the root node of an FXML document">fx:root</error> type="javafx.scene.layout.AnchorPane"/>
  </GridPane>
</GridPane>